# reservetestr-python

./: README.md  pyproject.toml
notebooks/: bootstrap_odp_backtest.ipynb  mack_chainladder_backtest.ipynb
src/reservetestr/: __init__.py  backtesting.py  datasets.py  framework.py  methods.py  plots.py  utils.py
src/reservetestr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/reservetestr/data/: clrd_triangles_fortesting_list.csv  meyers_exposure.csv
