[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reservetestr"
version = "0.1.0"
description = "Backtesting utilities for stochastic loss reserving methods using CAS loss reserve database triangles."
authors = [
  { name = "Codex" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "chainladder>=0.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.8",
  "seaborn>=0.13"
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.0",
  "nbformat>=5.9",
  "pytest>=7.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reservetestr = ["data/*.csv"]
